--- a/WindowsEmailAppReset/WindowsEmailAppReset.csproj
+++ b/WindowsEmailAppReset/WindowsEmailAppReset.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A7F13539-F26A-4123-825B-8EF57C1FF685}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WindowsEmailAccountMgr</RootNamespace>
-    <AssemblyName>WindowsEmailAccountMgr</AssemblyName>
+    <RootNamespace>WindowsEmailAppReset</RootNamespace>
+    <AssemblyName>WindowsEmailAppReset</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -72,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.manifest" />
     <None Include="packages.config" />
